--- a/style/typography/elements.scss
+++ b/style/typography/elements.scss
@@ -563,7 +563,7 @@
             padding: 5px;
             color: var(--b3-theme-on-surface);
             background-color: var(--b3-theme-surface-light);
-            mix-blend-mode: luminosity;
+            // mix-blend-mode: luminosity; // 和backdrop-filter一起导致卡顿、对话框闪烁
             border-radius: 6px 0 6px 0;
         }
 
